<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="50dp"
    android:paddingRight="30dp"
    android:paddingBottom="16dp"
    tools:context="com.csc475.mortgagecalculator.MainActivity">

    <EditText
        android:id="@+id/total_amount_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="5"
        android:hint="@string/enter_your_total_amount"
        android:importantForAutofill="no"
        android:inputType="numberSigned|number|numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/interest_rate_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="5"
        android:hint="@string/enter_your_interest_rate"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:labelFor="@id/loan_duration_seek_bar"
        android:text="@string/enter_your_mortgage_duration_years"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/loan_duration_seek_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30" />


    <TextView
        android:id="@+id/years_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        android:labelFor="@id/loan_duration_seek_bar"
        android:visibility="invisible"
        tools:text="Progress"
        android:text="@string/progress" />


    <Button
        android:id="@+id/calculate_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/mortgage_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textSize="24sp"/>


</LinearLayout>